--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ subprojects {
     dependencies {
         implementation 'com.zeroc:ice:3.7.6'
         implementation 'com.zeroc:icegrid:3.7.6'
+        implementation 'com.zeroc:icestorm:3.7.6'
     }
 
     //
