--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@ subprojects {
     apply plugin: 'com.zeroc.gradle.ice-builder.slice'
 
     //
-    // Both Client and Server projects share the Hello.ice Slice definitions
+    // Both Client and Server projects share the Sorter.ice Slice definitions
     //
     slice {
         java {
-            files = [file("../Hello.ice")]
+            files = [file("../Sorter.ice")]
         }
     }
 
