--- a/master/src/main/resources/master.config
+++ b/master/src/main/resources/master.config
@@ -1,7 +1,7 @@
 
 Worker.Endpoints=tcp -p 9090
 
-#Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
 
 
 #
