--- a/worker/src/main/resources/worker.config
+++ b/worker/src/main/resources/worker.config
@@ -3,7 +3,9 @@
 # "MasterSorter" object in the server.
 #
 
-MasterSorter.Proxy=masterSorter:default -h localhost -p 9099
+#Cambiar ip por la ip del ProxyMaster
+#MasterSorter.Proxy=masterSorter:default -h localhost -p 9090
+
 
 #
 # The worker creates one single object adapter with the name
@@ -12,7 +14,7 @@ MasterSorter.Proxy=masterSorter:default -h localhost -p 9099
 #
 
 Sorter.Worker.Endpoints=tcp:udp
-Ice.Default.Host=localhost
+#Ice.Default.Host=localhost
 
 #
 # The IceGrid locator proxy.
