--- a/iceConfig/db/node/servers/SimpleServer-1/config/config
+++ b/iceConfig/db/node/servers/SimpleServer-1/config/config
@@ -1,17 +1,17 @@
-# Configuration file (11/18/23 10:40:56.702)
+# Configuration file (11/29/23 11:43:54.752)
 
 # Server configuration
 Ice.Admin.ServerId=SimpleServer-1
 Ice.Admin.Endpoints=tcp -h localhost
 Ice.ProgramName=SimpleServer-1
-# Object adapter Hello
-Hello.Endpoints=tcp -h localhost
-Hello.AdapterId=SimpleServer-1.Hello
-Hello.ReplicaGroupId=ReplicatedHelloAdapter
+# Object adapter Sorter
+Sorter.Endpoints=tcp -h localhost
+Sorter.AdapterId=SimpleServer-1.Sorter
+Sorter.ReplicaGroupId=ReplicatedHelloAdapter
 # Server descriptor properties
-Identity=hello
+Identity=masterSorter
 IceMX.Metrics.Debug.GroupBy=id
 IceMX.Metrics.Debug.Disabled=1
 IceMX.Metrics.ByParent.GroupBy=parent
 IceMX.Metrics.ByParent.Disabled=1
-Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:tcp -h localhost -p 4061
