--- a/master/src/main/resources/master.config
+++ b/master/src/main/resources/master.config
@@ -1,7 +1,7 @@
 
 Worker.Endpoints=tcp -p 9090
 
-Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:default -h 10.147.19.115 -p 4061
 
 
 #
@@ -10,7 +10,7 @@ Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
 
 Sorter.Master.Endpoints=tcp -p 9099
 
-Ice.Default.Host=localhost
+Ice.Default.Host=10.147.19.115
 Ice.ThreadPool.Server.Size=30
 
 #       ICE STORM
@@ -18,7 +18,7 @@ Ice.ThreadPool.Server.Size=30
 #
 # This property is used by the clients to connect to IceStorm.
 #
-TopicManager.Proxy=DemoIceStorm/TopicManager:default -h localhost -p 10000
+TopicManager.Proxy=DemoIceStorm/TopicManager:default -h 10.147.19.115 -p 10000
 
 #
 
