--- a/worker/src/main/resources/worker.config
+++ b/worker/src/main/resources/worker.config
@@ -20,9 +20,9 @@ Sorter.Worker.Endpoints=tcp:udp
 # The IceGrid locator proxy.
 #
 DataController.Endpoints=tcp -p 9090
-Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
+Ice.Default.Locator=DemoIceGrid/Locator:default -h 10.147.19.115 -p 4061
 
-Storage.Proxy=callbackFile:default -h localhost -p 9098
+Storage.Proxy=callbackFile:default -h 10.147.19.115 -p 9098
 
 #
 # To use the IceGrid discovery plugin comment out the default locator
@@ -37,7 +37,7 @@ Storage.Proxy=callbackFile:default -h localhost -p 9098
 #
 # This property is used by the clients to connect to IceStorm.
 #
-TopicManager.Proxy=DemoIceStorm/TopicManager:default -h localhost -p 10000
+TopicManager.Proxy=DemoIceStorm/TopicManager:default -h 10.147.19.115 -p 10000
 
 #
 # Network Tracing
