--- a/almacenamiento/src/main/resources/storage.config
+++ b/almacenamiento/src/main/resources/storage.config
@@ -1,6 +1,6 @@
 Sorter.Storage.Endpoints=tcp -p 9098
-MasterSorter.Proxy=masterSorter:default -h localhost -p 9099
-Ice.Default.Host=localhost
+MasterSorter.Proxy=masterSorter:default -h 10.147.19.115 -p 9099
+Ice.Default.Host=10.147.19.115
 
 Worker.Endpoints=tcp -p 9090
 
