--- a/proxy/src/main/resources/masterProxy.config
+++ b/proxy/src/main/resources/masterProxy.config
@@ -3,7 +3,7 @@
 #Worker.Endpoints=tcp -p 9090
 #
 ##Conexión proxy-master, cambiar localhost por ip del Master
-MasterSorter.Proxy=masterSorter:default -h localhost -p 9099
+MasterSorter.Proxy=masterSorter:default -h 10.147.19.115 -p 9099
 #
 #
 #Sorter.MasterProxy.Endpoints=tcp -p 9090
