--- a/iceConfig/config.service
+++ b/iceConfig/config.service
@@ -7,7 +7,7 @@ IceStorm.InstanceName=DemoIceStorm
 # This property defines the endpoints on which the IceStorm
 # TopicManager listens.
 #
-IceStorm.TopicManager.Endpoints=default -h localhost -p 10000
+IceStorm.TopicManager.Endpoints=default -h 10.147.19.115 -p 10000
 
 #
 # This property defines the endpoints on which the topic
@@ -15,7 +15,7 @@ IceStorm.TopicManager.Endpoints=default -h localhost -p 10000
 # IceStorm instances this must run on a fixed port (or use
 # IceGrid).
 #
-IceStorm.Publish.Endpoints=tcp -h localhost -p 10001:udp -h localhost -p 10001
+IceStorm.Publish.Endpoints=tcp -h 10.147.19.115 -p 10001:udp -h localhost -p 10001
 
 #
 # TopicManager Tracing
