--- a/almacenamiento/src/main/resources/storage.config
+++ b/almacenamiento/src/main/resources/storage.config
@@ -1,8 +1,7 @@
-Sorter.Storage.Endpoints=tcp -p 9098
+Sorter.Storage.Endpoints=tcp -h 10.147.19.115 -p 9098
 MasterSorter.Proxy=masterSorter:default -h 10.147.19.115 -p 9099
 Ice.Default.Host=10.147.19.115
 
-Worker.Endpoints=tcp -p 9090
-
+Worker.Endpoints=tcp -p 9098
 
 Ice.ThreadPool.Server.Size=30
